--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,16 +2,29 @@ html{
   background-color: black;
     text-align: center;
     font-family: Verdana;
-    font-weight: normal;
+    font-weight: bold;
+    color:white;
 }
 
 h1{
   font-size: 50px;
-  color: white;
+}
+
+h2{
+    font-weight:300;
+    font-size:42px;
 }
 
 .link{
   font-size: 16px;
   color:aquamarine;
   font-weight: bold;
+}
+.inhalt{
+  font-size:21px;
+  color: Gray;
+}
+#footer{
+  text-align:right;
+  color:Gray;
 }
