--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@ html{
   background-color: black;
     text-align: center;
     font-family: Verdana;
-    font-weight: bold;
+    font-weight: normal;
     color:white;
 }
 
@@ -13,6 +13,7 @@ h1{
 h2{
     font-weight:300;
     font-size:42px;
+    font-weight:bold;
 }
 
 .link{
